# image_convolution

./: .gitignore  CMakeLists.txt  Calculator.cpp  Calculator.h  Filter.cpp  Filter.h  LICENSE  README.md  Timer.cpp  Transformer.cpp  Transformer.h  image_convolution  main.cpp
src/: Filter.cpp  Filter.h  Timer.h  Transformer.cpp  Transformer.h  main.cpp
wix/: Distribution.sln  Distribution.wixproj  ImageConvolutionFiles.wxs  Product.wxs
wix/Resources/: LICENSE.rtf
